# The libraries to build
noinst_LIBRARIES = libreadarc.a
noinst_HEADERS = \
	readarc.h \
	arcfile.h \
	databuf.h \
	dataset.h \
	endian.h \
	fileset.h \
	handlesig.h \
	namelist.h \
	reglist.h \
	utcrange.h

# The files to add to the library and to the source distribution
libreadarc_a_SOURCES = \
	$(libreadarc_a_HEADERS) \
        readarc.c \
        arcfile.c \
        databuf.c \
        dataset.c \
        endian.c \
        fileset.c \
        handlesig.c \
        namelist.c \
        reglist.c \
        utcrange.c
